• fixed menu z-index in contrast to social media icons on mobile view • added click to menu header to close menu • added min width of 300 to content container

--- a/src/components/Content/ContentContainer.scss
+++ b/src/components/Content/ContentContainer.scss
@@ -4,11 +4,13 @@
     padding: 30px 70px;
     position: absolute;
     width: 100%;
+    min-width: 300px;
     height: calc(100% - 100px);
     top: 100px;
     color: $page-fg;
     @include transition('ease-in-out', 0.3s);
-    overflow: auto;
+    overflow-y: hidden;
+    overflow-x: auto;
 }
 
 @media (max-width: 767px) {
